--- a/SiparisApp.Web/Views/Sepet/Sepetim.cshtml
+++ b/SiparisApp.Web/Views/Sepet/Sepetim.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 
 @model SepetModel
 
@@ -7,13 +7,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="col-md-12 text-center mt-5">
 
-<h1>Shopping Cart</h1>
+    <h1>Sipariş Sepeti</h1>
 
-<div class="row mt-5">
+</div>
+<div class="row m-5">
     <div class="col-md-8">
         <div class="text-left">
-            <h4>Cart Items</h4>
+            <h4>Sepet Bilgileri</h4>
         </div>
 
         @if (Model.SepetDetails.Count > 0)
@@ -22,10 +24,10 @@
                 <thead>
                     <tr>
                         <th></th>
-                        <th>Product Name</th>
-                        <th>Price</th>
-                        <th>Quantity</th>
-                        <th>Total</th>
+                        <th>Ürün Adı</th>
+                        <th>Fiyat</th>
+                        <th>Adet</th>
+                        <th>Toplam Fiyat</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -34,15 +36,15 @@
                     {
                         <tr>
                             <td>
-                                <img src="@item.ImageUrl" width="80" />
+                                <img src="../../img/Urunler/@item.ImageUrl" width="50" />
                             </td>
                             <td>@item.Name</td>
                             <td>@item.Price.ToString("c")</td>
                             <td>@item.Quantity</td>
                             <td>@((item.Quantity * item.Price).ToString("c"))</td>
                             <td>
-                                <form asp-controller="Basket" asp-action="DeleteFromBasket" method="post">
-                                    <input type="hidden" name="productId" value="@item.UrunId" />
+                                <form asp-controller="Sepet" asp-action="SepettenCikart" method="post">
+                                    <input type="hidden" name="urunId" value="@item.UrunId" />
                                     <button type="submit" class="btn btn-danger btn-sm">
                                         <i class="fa fa-times fa-fw"></i>
                                     </button>
@@ -58,7 +60,7 @@
         else
         {
             <div class="alert alert-warning">
-                No Product in Cart!
+                Sepette ürün yok!
             </div>
         }
     </div>
@@ -67,30 +69,27 @@
         @if (Model.SepetDetails.Count > 0)
         {
             <div class="text-left">
-                <h4>Cart Summary</h4>
+                <h4>Sepet Özeti</h4>
             </div>
             <table class="table">
                 <tbody>
                     <tr>
-                        <th>Cart Total</th>
+                        <th>Sepet Toplam</th>
                         <td>@Model.TotalPrice().ToString("c")</td>
                     </tr>
+
                     <tr>
-                        <th>Shipping</th>
-                        <td>Free</td>
-                    </tr>
-                    <tr>
-                        <th>Order Total</th>
+                        <th>Siparis Toplam</th>
                         <td>@Model.TotalPrice().ToString("c")</td>
                     </tr>
                 </tbody>
             </table>
             <div class="text-center">
-                <a href="/" class="btn btn-primary">
-                    <i class="fa fa-arrow-circle-left fa-fw"></i> Continue Shopping
+                <a href="/Urunler" class="btn btn-primary">
+                    <i class="fa fa-arrow-circle-left fa-fw"></i> Alışverişe Dön
                 </a>
-                <a href="Order/Index" class="btn btn-primary">
-                    Checkout <i class="fa fa-arrow-circle-right fa-fw"></i>
+                <a href="Sepet/SepettenCikart" class="btn btn-primary">
+                    Siparişe Devam Et <i class="fa fa-arrow-circle-right fa-fw"></i>
                 </a>
             </div>
 
